kubernetes/apps/kube-system/external-secrets/stores/onepassword/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: onepassword-connect
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: onepassword-connect
      app.kubernetes.io/name: onepassword-connect
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: external-secrets
            app.kubernetes.io/name: external-secrets
            ## Namespace where external-secret lives. Can be removed if they're in the same namespace
            k8s:io.kubernetes.pod.namespace: kube-system
